More translation strings.

--- a/ihp/scorecards/locale/es/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/es/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-25 12:08+0200\n"
-"PO-Revision-Date: 2012-06-25 12:12\n"
+"PO-Revision-Date: 2012-06-25 12:29\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -146,6 +146,8 @@ msgid ""
 "At least 10% of seats in the country's Health Sector Coordination mechanisms"
 " are allocated to Civil Society"
 msgstr ""
+">10% de los asientos en el mecanismo de coordinación del sector salud son "
+"ocupados por la sociedad "
 
 #: templates/scorecards/country-page-1.svg:5829
 msgid "ETHIOPIA"
