Updated fuzzy translations.

--- a/ihp/scorecards/locale/es/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/es/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-01 22:05+0200\n"
-"PO-Revision-Date: 2012-07-01 22:09\n"
+"PO-Revision-Date: 2012-07-01 22:28\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -720,7 +720,7 @@ msgstr ""
 "expectativas establecidas de mutuo acuerdo."
 
 #: templates/scorecards/ihp-page-2.svg:1150
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Rating symbols illustrate whether the Agency has achieved %(tick)s, is "
 "working towards %(arrow)s, or has not achieved %(exclamation)s its targets "
@@ -728,8 +728,15 @@ msgid ""
 "assessments undertaken by the IHP+Results Consortium can be found online in "
 "the North-South Observatory for IHP+Results (www.ihpresults.net)."
 msgstr ""
-"Los Símbolos de Avances revelan si en el 2011 el gobierno había logrado %(tick)s, había realizado avances %(arrow)s o no había realizado avances \n"
-"%(exclamation)s en relación con 10 Estándares de Desempeño desde el año de la línea de base (2005-2007). Ver detalles en línea de estas calificaciones y las metas asociadas en el portal web del Pacto IHP+Resultados (www.ihpresults.net)."
+"Los símbolos de calificación revelan si en el 2011 la organización había "
+"logrado %(tick)s, había realizado avances hacia el logro de %(arrow)s o no "
+"había logrado %(exclamation)s sus metas desde el año de la línea de base "
+"(2005-2007). Donde no existía información disponible se ha utilizado la "
+"calificación [?]. En algunos casos se ha utilizado la calificación No "
+"Procede [n/p], ya sea donde la agencia no tiene ninguna actividad sobre la "
+"cual informar en un área específica, o donde el contexto nacional no permite"
+" realizar actividades. Ver mayores detalles en línea en el portal web del "
+"Pacto IHP+Resultados (www.ihpresults.net)."
 
 #: templates/scorecards/ihp-page-2.svg:1151
 msgid ""
