--- a/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-01 22:05+0200\n"
-"PO-Revision-Date: 2012-07-01 22:04\n"
+"PO-Revision-Date: 2012-07-01 22:29\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 "X-Translated-Using: django-rosetta 0.6.8\n"
 
@@ -98,8 +98,7 @@ msgid ""
 "A costed, comprehensive national HRH plan (integrated with the health plan) "
 "is being implemented or developed."
 msgstr ""
-"Un plan national de ressources humaines de la santé chiffré et exhaustif "
-"(intégré dans le plan de\n"
+"Un plan national de ressources humaines de la santé chiffré et exhaustif (intégré dans le plan de\n"
 "santé national) est mis en oeuvre ou en cours de développement"
 
 #: models.py:362
@@ -121,8 +120,8 @@ msgstr ""
 
 #: models.py:381
 msgid ""
-"Improvement of at least one measure (ie 0.5 points) on the PFM/CPIA scale of "
-"performance."
+"Improvement of at least one measure (ie 0.5 points) on the PFM/CPIA scale of"
+" performance."
 msgstr ""
 "Progrès d’au moins un degré (0.5 point) sur l’échelle de performance des "
 "systèmes de gestion des finances publiques de l’EPIN."
@@ -145,20 +144,18 @@ msgstr ""
 
 #: models.py:409
 msgid ""
-"Mutual assesments (such as joint Annual Health Sector Review) are being made "
-"of progress implementing commitments in the health sector, including on aid "
-"effectiveness."
+"Mutual assesments (such as joint Annual Health Sector Review) are being made"
+" of progress implementing commitments in the health sector, including on aid"
+" effectiveness."
 msgstr ""
-"Des évaluations mutuelles des progrès accomplish , telles que les revues "
-"annuelles conjointes du secteur de la santé, ont été conduites, concernant\n"
-"la mise en oeuvre des engagements dans le secteur de la santé, y compris en "
-"ce qui concerne l’efficacité de l’aide."
+"Des évaluations mutuelles des progrès accomplish , telles que les revues annuelles conjointes du secteur de la santé, ont été conduites, concernant\n"
+"la mise en oeuvre des engagements dans le secteur de la santé, y compris en ce qui concerne l’efficacité de l’aide."
 
 #: models.py:418
 #, python-format
 msgid ""
-"At least 10% of seats in the country's Health Sector Coordination mechanisms "
-"are allocated to Civil Society"
+"At least 10% of seats in the country's Health Sector Coordination mechanisms"
+" are allocated to Civil Society"
 msgstr ""
 "> 10% des sièges alloués à la société civile dans\n"
 "le mécanisme de coordina􀀉on du secteur de la\n"
@@ -183,8 +180,8 @@ msgstr ""
 #: templates/scorecards/country-page-2.svg:7796
 msgid ""
 "This work is licensed under the Creative Commons Atribution-NonCommercial "
-"3.0 Unported License. To view a copy of this license, visit http://"
-"creativecommons.org.licenses/by-nc/3.0"
+"3.0 Unported License. To view a copy of this license, visit "
+"http://creativecommons.org.licenses/by-nc/3.0"
 msgstr ""
 
 #: templates/scorecards/country-page-1.svg:5839
@@ -358,8 +355,7 @@ msgid ""
 "story of IHP+ implementation in a logical flow: from the national health "
 "plan to monitoring and evaluation of that plan."
 msgstr ""
-"Le scorecard des pays présente les résultats selon cinq secteurs de "
-"résultats (voir ci-dessous) pour décrire le mise en oeuvre d'IHP\n"
+"Le scorecard des pays présente les résultats selon cinq secteurs de résultats (voir ci-dessous) pour décrire le mise en oeuvre d'IHP\n"
 "+ de manière logique: du plan de santé national au suivi et à."
 
 #: templates/scorecards/country-page-2.svg:7652
@@ -369,15 +365,13 @@ msgid ""
 "achieved %(tick)s, is working towards %(arrow)s, or hasn’t made progress "
 "%(exclamation)s against agreed targets."
 msgstr ""
-"Progrès - Le symbole %(tick)s indique que l'Agence a fait des progrès, le "
-"symbole %(arrow)s indique qu'elle fait actuellement des progrès et\n"
-"le symbole %(exclamation)s indique qu'elle n'a pas fait de progrès en ce qui "
-"concerne les 10 mesures de la performance standard."
+"Progrès - Le symbole %(tick)s indique que l'Agence a fait des progrès, le symbole %(arrow)s indique qu'elle fait actuellement des progrès et\n"
+"le symbole %(exclamation)s indique qu'elle n'a pas fait de progrès en ce qui concerne les 10 mesures de la performance standard."
 
 #: templates/scorecards/country-page-2.svg:7653
 msgid ""
-"Progress against the Millennium Development Goals is provided for contextual "
-"purposes."
+"Progress against the Millennium Development Goals is provided for contextual"
+" purposes."
 msgstr ""
 "Les progrès réalisés par rapport aux Objectifs du Millénaire pour le "
 "Développement sont présentés à des fins contextuelles."
@@ -392,17 +386,15 @@ msgid ""
 "performance against an agreed set of Standard Performance Measures (SPMs). "
 "The following headings are used:"
 msgstr ""
-"L'envers du scorecard des pays présente la performance du gouvernement à "
-"l'échelle nationale par rapport aux différentes mesures\n"
-"de la performance standard ayant été convenues. Les titres suivants sont "
-"utilisés:"
+"L'envers du scorecard des pays présente la performance du gouvernement à l'échelle nationale par rapport aux différentes mesures\n"
+"de la performance standard ayant été convenues. Les titres suivants sont utilisés:"
 
 #: templates/scorecards/country-page-2.svg:7658
 msgid ""
 "Expected Results reflect key commitments made in the IHP+ Global Compact."
 msgstr ""
-"Les résultats attendus reflètent les enagagements clés qui ont été pris dans "
-"cadre du Pacte mondial IHP+."
+"Les résultats attendus reflètent les enagagements clés qui ont été pris dans"
+" cadre du Pacte mondial IHP+."
 
 #: templates/scorecards/country-page-2.svg:7659
 #, python-format
@@ -410,15 +402,15 @@ msgid ""
 "Progress Symbols illustrate whether in 2011 the government had achieved "
 "%(tick)s, made progress %(arrow)s, or had not made progress %(exclamation)s "
 "against 10 SPMs, since the baseline year (2005-7). Details of these ratings "
-"and related targets can be found online on the IHP+Results website (www."
-"ihpresults.net)"
+"and related targets can be found online on the IHP+Results website "
+"(www.ihpresults.net)"
 msgstr ""
 "Progrès - Le symbole %(tick)s indique que l'Agence a fait des progrès, le "
 "symbole %(arrow)s indique qu'elle fait actuellement des progrès et le "
 "symbole %(exclamation)s indique qu'elle n'a pas fait de progrès en ce qui "
 "concerne les 10 mesures de la performance standard, depuis l'année de base "
-"(2005-7).  Les détails realtifs à ces évaluations sont présentés sur le site "
-"Web pour IHP+Results (www.ihpresults.net)."
+"(2005-7).  Les détails realtifs à ces évaluations sont présentés sur le site"
+" Web pour IHP+Results (www.ihpresults.net)."
 
 #: templates/scorecards/country-page-2.svg:7666
 msgid ""
@@ -426,8 +418,8 @@ msgid ""
 "reflects the aggregate of data reported by Development Partners (for "
 "indicator 2DPb) that are active in the country in question."
 msgstr ""
-"Les évaluations sur l'assistance technique résument les données fournies par "
-"les partenaires de développement signataires de l'IHP+ qui jouent un rôle "
+"Les évaluations sur l'assistance technique résument les données fournies par"
+" les partenaires de développement signataires de l'IHP+ qui jouent un rôle "
 "actif dans ce pays."
 
 #: templates/scorecards/country-page-2.svg:7672
@@ -441,12 +433,11 @@ msgstr "Réduire l’extrême pauvreté et la faim"
 #: templates/scorecards/country-page-2.svg:7680
 #, python-format
 msgid ""
-"Population living on less than $1 a day %(value)s in %(year)s. (%(arrow)s"
-"%(change_value)s since %(change_year)s)"
+"Population living on less than $1 a day %(value)s in %(year)s. "
+"(%(arrow)s%(change_value)s since %(change_year)s)"
 msgstr ""
 "Population disposant de moins de\n"
-"1$ par jour %(value)s en %(year)s. (%(arrow)s%(change_value)s depuis "
-"%(change_year)s)"
+"1$ par jour %(value)s en %(year)s. (%(arrow)s%(change_value)s depuis %(change_year)s)"
 
 #: templates/scorecards/country-page-2.svg:7684
 msgid "Achieve Universal Primary Education"
@@ -455,11 +446,11 @@ msgstr "Assurer l’éducation primaire pour tous"
 #: templates/scorecards/country-page-2.svg:7688
 #, python-format
 msgid ""
-"Children enrolled in primary education %(value)s in %(year)s. (%(arrow)s"
-"%(change_value)s since %(change_year)s)"
+"Children enrolled in primary education %(value)s in %(year)s. "
+"(%(arrow)s%(change_value)s since %(change_year)s)"
 msgstr ""
-"Scolarisation des enfants dans le primaire %(value)s en %(year)s. (%(arrow)s"
-"%(change_value)s depuis %(change_year)s)"
+"Scolarisation des enfants dans le primaire %(value)s en %(year)s. "
+"(%(arrow)s%(change_value)s depuis %(change_year)s)"
 
 #: templates/scorecards/country-page-2.svg:7692
 msgid "Promote Gender Equality and Empower Women"
@@ -482,8 +473,8 @@ msgstr "Réduire la mortalité infantile"
 #: templates/scorecards/country-page-2.svg:7704
 #, python-format
 msgid ""
-"Under 5 Mortality rate %(value)s per 1000 live births in %(year)s. (%(arrow)s"
-"%(change_value)s since %(change_year)s)"
+"Under 5 Mortality rate %(value)s per 1000 live births in %(year)s. "
+"(%(arrow)s%(change_value)s since %(change_year)s)"
 msgstr ""
 "Taux de mortalité de moins de 5 %(value)s sur 1,000 naissances vivantes en "
 "%(year)s. (%(arrow)s%(change_value)s depuis %(change_year)s)"
@@ -504,8 +495,8 @@ msgstr ""
 #: templates/scorecards/country-page-2.svg:7717
 #, python-format
 msgid ""
-"Unmet need for family planning %(value)s in %(year)s. (%(arrow)s"
-"%(change_value)s since %(change_year)s)"
+"Unmet need for family planning %(value)s in %(year)s. "
+"(%(arrow)s%(change_value)s since %(change_year)s)"
 msgstr ""
 "Besoins non satisfaits en matière de planification familiale %(value)s en "
 "%(year)s. (%(arrow)s%(change_value)s depuis %(change_year)s)"
@@ -520,8 +511,8 @@ msgid ""
 "HIV prevalence %(value)s in %(year)s. (%(arrow)s%(change_value)s since "
 "%(change_year)s)"
 msgstr ""
-"Taux de prévalence du VIH %(value)s en  %(year)s. (%(arrow)s%(change_value)s "
-"depuis %(change_year)s)"
+"Taux de prévalence du VIH %(value)s en  %(year)s. (%(arrow)s%(change_value)s"
+" depuis %(change_year)s)"
 
 #: templates/scorecards/country-page-2.svg:7732
 #, python-format
@@ -536,8 +527,8 @@ msgstr ""
 #: templates/scorecards/country-page-2.svg:7735
 #, python-format
 msgid ""
-"TB incidence per %(value)s per 100,000 in %(year)s. (%(arrow)s"
-"%(change_value)s since %(change_year)s)"
+"TB incidence per %(value)s per 100,000 in %(year)s. "
+"(%(arrow)s%(change_value)s since %(change_year)s)"
 msgstr ""
 
 #: templates/scorecards/country-page-2.svg:7741
@@ -568,8 +559,8 @@ msgstr ""
 msgid ""
 "GOVERNMENT OF %(country)s: PROGRESS IN IMPLEMENTING ITS IHP+ COMMITMENTS"
 msgstr ""
-"GOUVERNEMENT DE %(country)s PROGRES DANS L'APPLICATION DE SES ENGAGEMENTS IHP"
-"+"
+"GOUVERNEMENT DE %(country)s PROGRES DANS L'APPLICATION DE SES ENGAGEMENTS "
+"IHP+"
 
 #: templates/scorecards/country-page-2.svg:7760
 #: templates/scorecards/ihp-page-1.svg:6926
@@ -672,8 +663,8 @@ msgstr ""
 #: templates/scorecards/country-page-2.svg:7900
 #: templates/scorecards/ihp-page-1.svg:6975
 msgid ""
-"Country systems for procurement and public financial management are used and "
-"strengthened."
+"Country systems for procurement and public financial management are used and"
+" strengthened."
 msgstr ""
 "Les systèmes\n"
 "d'approvisionnement et de\n"
@@ -745,7 +736,7 @@ msgstr ""
 "cadre du Pacte mondial IHP+."
 
 #: templates/scorecards/ihp-page-2.svg:1150
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Rating symbols illustrate whether the Agency has achieved %(tick)s, is "
 "working towards %(arrow)s, or has not achieved %(exclamation)s its targets "
@@ -753,12 +744,11 @@ msgid ""
 "assessments undertaken by the IHP+Results Consortium can be found online in "
 "the North-South Observatory for IHP+Results (www.ihpresults.net)."
 msgstr ""
-"Progrès - Le symbole %(tick)s indique que l'Agence a fait des progrès, le "
-"symbole %(arrow)s indique qu'elle fait actuellement des progrès et le "
-"symbole %(exclamation)s indique qu'elle n'a pas fait de progrès en ce qui "
-"concerne les 10 mesures de la performance standard, depuis l'année de base "
-"(2005-7).  Les détails realtifs à ces évaluations sont présentés sur le site "
-"Web pour IHP+Results (www.ihpresults.net)."
+"Evaluations: Le symbole %(tick)s indique que l'Agence a atteint les objectfs"
+" relatifs aux mesures de la performance standard, le symbole %(arrow)s "
+"indique qu'elle fait actuellement des progrès et le symbole %(exclamation)s "
+"indique qu'elle n'a pas fait de progrès en ce qui concerne les 12 mesures de"
+" la performance standard."
 
 #: templates/scorecards/ihp-page-2.svg:1151
 msgid ""
@@ -784,20 +774,17 @@ msgstr ""
 
 #: templates/scorecards/ihp-page-2.svg:1153
 msgid ""
-"Scorecard ratings are aggregates of performance across a number of "
-"countries. Aggregates might hide variations in the agency's\n"
+"Scorecard ratings are aggregates of performance across a number of countries. Aggregates might hide variations in the agency's\n"
 "performance. Disaggregated data can be found at www.ihpresults.net"
 msgstr ""
-"Les évaluations du scorecard constituent des agrégats de performance dans un "
-"certain nombre de pays. Les agrégats peuvent dissimuler des variations dans "
-"la\n"
+"Les évaluations du scorecard constituent des agrégats de performance dans un certain nombre de pays. Les agrégats peuvent dissimuler des variations dans la\n"
 "performance des partenaires."
 
 #: templates/scorecards/ihp-page-2.svg:1155
 msgid ""
-"NB: The ratings presented here are based on self-reported data.  IHP+Results "
-"has taken steps to triangulate this data using other sources.  More details "
-"are vailable at www.ihpresults.net"
+"NB: The ratings presented here are based on self-reported data.  IHP+Results"
+" has taken steps to triangulate this data using other sources.  More details"
+" are vailable at www.ihpresults.net"
 msgstr ""
 "NB : Les évaluations présentées ici sont fondées sur des données "
 "autodéclarées. IHP+Results a pris des mesures pour trianguler ces données à "
