Added translation for description on bottom of DP scorecard.

--- a/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-30 09:12+0200\n"
-"PO-Revision-Date: 2012-07-30 09:15\n"
+"PO-Revision-Date: 2012-08-07 08:20\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -714,6 +714,11 @@ msgid ""
 "Uganda. Budget support is also not counted. The rating may therefore not "
 "fully reflect progress, and could be an underestimate."
 msgstr ""
+"*La performance est évaluée seulement au Niger, au Rwanda, au Sénégal, au "
+"Sierra Leone et en Ouganda. L’approvisionnement financé au moyen d'un appui "
+"budgétaire n’est pas compté non plus. Par conséquent, il est possible que "
+"l’évaluation ne reflète pas entièrement les progrès accomplis et pourrait "
+"ainsi constituer une sous-évaluation."
 
 #: templates/scorecards/ihp-page-2.svg:1131
 msgid "SPECIFIC ACTIONS TO ACHIEVE RESULTS"
