--- a/ihp/scorecards/locale/es/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/es/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-30 09:12+0200\n"
-"PO-Revision-Date: 2012-07-30 09:15\n"
+"PO-Revision-Date: 2012-08-07 08:20\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -696,6 +696,10 @@ msgid ""
 "Uganda. Budget support is also not counted. The rating may therefore not "
 "fully reflect progress, and could be an underestimate."
 msgstr ""
+"*El rendimiento solamente se evalúa en Níger, Ruanda, Senegal, Sierra Leona "
+"y Uganda. Tampoco se consideran las adquisiciones financiadas con apoyo "
+"presupuestario. Por lo tanto, la calificación podría no reflejar fielmente "
+"los avances, encontrándose más bien por debajo del nivel real."
 
 #: templates/scorecards/ihp-page-2.svg:1131
 msgid "SPECIFIC ACTIONS TO ACHIEVE RESULTS"
