--- a/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
+++ b/ihp/scorecards/locale/fr/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-07 17:03+0200\n"
-"PO-Revision-Date: 2012-08-07 17:08\n"
+"PO-Revision-Date: 2012-08-15 14:47\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -133,8 +133,8 @@ msgid ""
 "A transparent and monitorable performance assessment framework is in place "
 "to assess progress in the health sector."
 msgstr ""
-"Un cadre d’évaluation transparent et controllable est en place afin "
-"d’évaluer les progrès dans le secteur de la santé"
+"Un cadre d’évaluation transparent et controlable est en place afin d’évaluer"
+" les progrès dans le secteur de la santé"
 
 #: models.py:410
 msgid ""
